@@ -3,7 +3,6 @@ package lotto.model;
 import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
 
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Stream;
@@ -13,7 +12,7 @@ public class Lottoes implements Iterable<Lotto>{
     private final List<Lotto> lottoes;
 
     public Lottoes(List<Lotto> lottoes) {
-        this.lottoes = Collections.unmodifiableList(lottoes);
+        this.lottoes = List.copyOf(lottoes);
     }
 
     public Stream<Lotto> stream() {
@@ -25,11 +24,11 @@ public class Lottoes implements Iterable<Lotto>{
     }
 
     public Lottoes combine(Lottoes other) {
-        return Stream.concat(lottoes.stream(), other.lottoes.stream())
+        return Stream.concat(stream(), other.stream())
             .collect(collectingAndThen(toList(), Lottoes::new));
     }
 
-    public Money getPrice() {
+    public Money price() {
         return Lotto.PRICE.multiply(lottoes.size());
     }
 
